# stretch3-web-teleop

./: .gitignore  Procfile  README.md  start.sh
backend/: main.py  pyproject.toml
backend/scripts/: align_recording.py  compute_camera_poses.py  generate_camera_urdf.py  make_preview.py  unify_recording.py  visualize_recording.py
backend/src/backend/: main.py  messages.py  recorder.py  zmq_client.py
backend/src/bridge/: config.py  main.py  recorder.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: CameraFeed.vue  CameraGrid.vue  JointControls.vue  RecordButton.vue  StatusPanel.vue  TopBar.vue
frontend/src/composables/: useJointCache.ts  useWebSocket.ts
frontend/src/stores/: recordingStore.ts  robotStore.ts
frontend/src/types/: protocol.ts
