[project]
name = "stretch3-web-teleop-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blosc2>=4.1.2",
    "fastapi>=0.135.1",
    "h5py>=3.16.0",
    "hatchling>=1.29.0",
    "msgpack>=1.1.2",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "pyzmq>=27.1.0",
    "stretch3-zmq-core",
    "urchin>=0.0.30",
    "uvicorn[standard]>=0.42.0",
]

[tool.uv.sources]
stretch3-zmq-core = { git = "https://github.com/lnfu/stretch3-zmq.git", subdirectory = "packages/core" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
